ghc-4335c07/testsuite/tests/parser/should_fail/T13414.lhs
#!/usr/bin/env runhaskell
> module T13414 where
> main = invalid_ident_
